--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>0.0.5</version>
 	<name>my-app</name>
 	
-	<!-- Demo on Github Webhook-->
+	<!-- Demo on Github Webhooks-->
 
 	<url>http://maven.apache.org</url>
 
